--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,19 @@ h3 {
   padding: 0.7rem 0;
 }
 
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
 .rating .rating-num {
   margin-left: 0.5rem ;
+}
+
+.form-control {
+  padding: 0.75rem 1rem;
 }
