--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,8 +25,9 @@ h2 {
 
 .carousel-item-next,
 .carousel-item-prev,
-.carouse-item.active {
+.carousel-item.active {
   display: flex !important;
+  justify-content: center;
 }
 
 .carousel-caption {
